
    The way we used to use libfuse got first deprecated and support
    for it is now removed from the libfuse git repository entirely.
    In addition, our previous use of said libfuse API triggered a
    bug resulting in a segmentation fault in at least libfuse 2.9.2
    and 2.9.7. We now use libfuse in a less elegant but more usual
    way, and do not trigger the bug anymore.

o Gmp.mpq

  Fix numbers between -1.0 and 1.0 sometimes missing a leading 0.

o Pike.identify_cycle

  Fix various issues with LFUNs throwing errors.

  LFUNs used by mapping operations may throw errors; this caused
  identify_loop_visit_leave() to also throw errors. The rest of
  the identify_cycle code was not happy about this and

  - Forgot to unlock the mc_mutex. This caused all following calls
    to Pike.identify_cycle() and Pike.count_memory() to hang.

  - Leaked memory.

  The above issues are now avoided by instead using the addresses
  of objects as indices in the affected mapping. It also fixes
  the issue with hangs if there are objects with lfuns calling
  Pike.identify_cycle() or Pike.count_memory().

o Sql.pgsql

  - Fix regression bug since rel 12 that hangs queries returning over 1024
    records.

  - Fix all rare-deadlock-causes logged in the last two years.

o Stdio.Buffer

  Eliminate race condition in read_cstring().

o Thread.Farm

  Fixed lost error in provide_error() exception handling.

  Avoid delayed deallocation of jobs by clearing references immediately
  after execution.


Building & Tools
----------------

o Java

  The location of libjvm is now detected on Ubuntu 18.04.

o Postgres

  Support Postgresql 10 and later.


Changes since Pike 8.0.498 (release 11)
----------------------------------------------------------------------

New Features
------------

o Crypto.Hash.SCRAM

  New class to support SCRAM authentication.

o Concurrent

  - Add map_with() as an alias to flat_map().

  - Add a convenience variant to zip().
